--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: $DOCKER_IMAGE
+image: docker-registry.xx.network/elixxir/sysadmin/backend-ci:go1.19-cuda11.1.1
 
 before_script:
   - go version || echo "Go executable not found."
@@ -74,7 +74,6 @@ doc-update:
   stage: doc-update
   only:
     - tags
-  image: $DOCKER_IMAGE
   script:
     # GOPRIVATE is cleared so that the public cache is pulled instead of directly pulling client.
     - NEXT_WAIT_TIME=0; until [ $NEXT_WAIT_TIME -eq 15 ] || GOOS=js GOARCH=wasm GOPRIVATE="" go install gitlab.com/elixxir/xxdk-wasm@$CI_COMMIT_TAG; do sleep 60; (( NEXT_WAIT_TIME+=1 )); done; [ $NEXT_WAIT_TIME -lt 15 ]
