--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "xxdk-wasm",
     "version": "0.3.6",
     "description": "WebAssembly bindings for xxDK.",
-    "main": "index.ts",
+    "main": "dist/main.ts",
     "directories": {
         "test": "test"
     },
@@ -11,9 +11,10 @@
         "xxdk-dmIndexedDkWorker.wasm",
         "xxdk-logFileWorker.wasm",
         "xxdk-stateIndexedDkWorker.wasm",
-        "xxdk.wasm",
+        "xxdk.wasm"
     ],
     "scripts": {
+        "build": "webpack",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -27,5 +28,11 @@
         "privacy"
     ],
     "author": "Richard T. Carback III",
-    "license": "BSD-2-Clause"
+    "license": "BSD-2-Clause",
+    "devDependencies": {
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.3.3",
+        "webpack": "^5.90.0",
+        "webpack-cli": "^5.1.4"
+    }
 }
