--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "xxdk-wasm",
     "version": "0.3.9",
     "description": "WebAssembly bindings for xxDK.",
-    "module": "src/index.ts",
+    "main": "dist/bundle.js",
+    "module": "dist/bundle.js",
     "directories": {
         "test": "test",
         "src": "src"
