--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
     "version": "0.3.10",
     "description": "WebAssembly bindings for xxDK.",
     "main": "dist/bundle.js",
-    "module": "dist/bundle.js",
     "directories": {
         "test": "test",
         "src": "src"
     },
     "files": [
+        "src/index.ts",
         "dist/*"
     ],
     "scripts": {
-        "build": "webpack",
+        "clean": "rm -rf dist",
+        "build": "npm run clean && webpack",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -28,8 +29,14 @@
     "author": "Richard T. Carback III",
     "license": "BSD-2-Clause",
     "devDependencies": {
+        "@babel/preset-env": "^7.23.9",
+        "@babel/preset-typescript": "^7.23.3",
+        "babel-loader": "^9.1.3",
+        "safe-buffer": "^5.2.1",
         "ts-loader": "^9.5.1",
+        "tsc": "^2.0.4",
         "typescript": "^5.3.3",
+        "undici-types": "^6.5.0",
         "webpack": "^5.90.0",
         "webpack-cli": "^5.1.4"
     }
