--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
-        "noImplicitAny": true,
+        "outDir": "dist",
+        "module": "commonjs",
+        "target": "es5",
+        "lib": [ "es2015", "dom" ],
         "sourceMap": true,
-        "module": "es6",
-        "target": "es6",
-        "jsx": "react",
-        "allowJs": true,
-        "moduleResolution": "node"
-    }
+        "declaration": true,
+        "types": []
+    },
+    "include": [
+        "src/*"
+    ]
 }
