--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "lib": [ "es2015", "dom" ],
         "sourceMap": true,
         "declaration": true,
-        "types": []
+        "types": [ "node" ],
+        "resolveJsonModule": true,
     },
     "include": [
         "src/*"
