--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "devDependencies": {
         "@babel/preset-env": "^7.23.9",
         "@babel/preset-typescript": "^7.23.3",
+        "@types/node": "^20.11.17",
         "babel-loader": "^9.1.3",
         "safe-buffer": "^5.2.1",
         "ts-loader": "^9.5.1",
@@ -38,5 +39,8 @@
         "undici-types": "^6.5.0",
         "webpack": "^5.90.0",
         "webpack-cli": "^5.1.4"
+    },
+    "dependencies": {
+        "ts.data.json": "^2.2.0"
     }
 }
