--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,8 @@ s3upload:
     - tags
   script:
     - mc --version
+    - jq --version
+    - echo "Detected version: " $(jq -r .version package.json)
     - mkdir -p npm_release
     - npm i
     - npm run build
@@ -74,7 +76,7 @@ s3upload:
     - cd npm_release && tar -xzvf *.tgz && cd ..
     # Upload to S3
     - mc alias set elixxir-s3 $ARTIFACT_S3_ENDPOINT $ARTIFACT_S3_KEY $ARTIFACT_S3_SECRET
-    - mc cp --recursive --md5 npm_release/package/ elixxir-s3/$ARTIFACT_S3_BUCKET/wasm/xxdk-wasm-0.3.14/
+    - mc cp --recursive --md5 npm_release/package/ elixxir-s3/$ARTIFACT_S3_BUCKET/wasm/xxdk-wasm-$(jq -r .version package.json)/
   artifacts:
     paths:
       - npm_release
