--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,9 +53,10 @@ build:
     - GOOS=js GOARCH=wasm go build -ldflags '-w -s' -trimpath -o release/xxdk-dmIndexedDbWorker.wasm ./indexedDb/impl/dm/...
     - GOOS=js GOARCH=wasm go build -ldflags '-w -s' -trimpath -o release/xxdk-logFileWorker.wasm ./logging/workerThread/...
     - GOOS=js GOARCH=wasm go build -ldflags '-w -s' -trimpath -o release/xxdk-stateIndexedDbWorker.wasm ./indexedDb/impl/state/...
-    - cp assets/jsutils/* release/
     # Wasm executor
     - cp wasm_exec.js release/
+    # ndf reference file
+    - cp ndf.js release/
   artifacts:
     paths:
       - release/
