--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "declaration": true,
         "types": [ "node" ],
         "resolveJsonModule": true,
+		"esModuleInterop": true, 
     },
     "include": [
         "src/*"
